[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
clap = { version = "4.0", features = ["derive"] }
koopa = "0.0.8"

[build-dependencies]
lalrpop = "0.20.0"

